[package]
name = "mutaig"
version = "0.1.0"
authors = ["Rémi Germe <remi.germe@gmail.com>"]
edition = "2024"
description = "A library for mutable AIGs."
documentation = "https://docs.rs/mutaig"
readme = "README.md"
repository = "https://github.com/remigerme/mutaig"
license = "MIT"

[dependencies]
thiserror = "2.0.12"
