[package]
name = "mutaig"
version = "0.1.2"
authors = ["Rémi Germe <remi.germe@gmail.com>"]
edition = "2024"
description = "Mutable AIGs designed for equivalence checking."
documentation = "https://docs.rs/mutaig"
readme = "README.md"
repository = "https://github.com/remigerme/mutaig"
license = "MIT"

[dependencies]
thiserror = "2.0.12"
